--- a/frontend/src/components/Products/Product.css
+++ b/frontend/src/components/Products/Product.css
@@ -17,7 +17,6 @@
     display: flex;
     margin: 100px 0px;
     flex-wrap: wrap;
-
     padding-left: 50px;
 }
 
@@ -144,7 +143,7 @@
 }
 
 .brand-index {
-    font-size: 12px;
+    font-size: .9vw;
     font-weight: 700;
     width: 100%;
     margin-bottom: 0px;
@@ -153,7 +152,7 @@
 
 .price-index {
     display: flex;
-    font-size: 16px;
+    font-size: 1.1vw;
     font-weight: 700;
     width: 100%;
     padding-top: 18px;
@@ -165,6 +164,7 @@
     color: black;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .prod-show-link {
@@ -335,7 +335,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: left;
-    margin-right: 170px;
+    margin-right: 12vw;
   }
 
   .category-links li {
@@ -343,16 +343,16 @@
     display: inline-flex;
     align-items: center;
     line-height: 1.25;
-    font-size: 12px;
+    font-size: .9vw;
     padding: 0.25em 12px;
     gap: 8px;
-    min-height: 44px;
-    width: 170px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 6px;
+    min-height: 3.5vw;
+    width: 12vw;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px .8vw;
     border-radius: 4px;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 1vw;
  
   }
   
