--- a/frontend/src/components/Products/Product.css
+++ b/frontend/src/components/Products/Product.css
@@ -34,7 +34,7 @@
 }
 
 .brand {
-    font-size: 14px;
+    font-size: 1.2vw;
     color: black;
     font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
@@ -55,25 +55,25 @@
 }
 
 .name {
-    font-size: 16px;
+    font-size: 1.5vw;
     padding-bottom: 30px;
 }
 
 .price {
     color: gray;
-    font-size: 12px;
+    font-size: 1vw;
     width: 70%;
     padding-bottom: 17px;
 }
 
 .price strong {
-    font-size: 16px;
+    font-size: 1.4vw;
     color: black;
     text-decoration: none;
 }
 
 .size {
-    font-size: 14px;
+    font-size: 1.2vw;
     text-decoration: none;
 }
 
@@ -84,8 +84,8 @@
 .add-love-button {
     background-color: transparent;
     border: none;
-    margin-top: 310px;
-    margin-left: 40px;
+    margin-top: 41.5vh;
+    margin-left: 3vw;
 }
 
 #loved-active {
@@ -93,10 +93,10 @@
 }
 
 .cart-button {
-    font-size: 14px;
-    padding: 0.25em 1.125em 0.25em 58px;
-    min-height: 44px;
-    font-weight: bold;
+    font-size: 1.2vw;
+    padding: 0.25em 1.125em 0.25em 1.7vw;
+    min-height: 5vh;
+    font-weight: 700;
     border-width: 2px;
     display: inline-flex;
     justify-content: center;
@@ -111,15 +111,15 @@
     transition: background-color 0.2s ease 0s;
     background-color: rgb(207, 17, 44);
     min-width: 10.47em;
-    width: 282px;
-    margin-top: 310px;
+    width: 20vw;
+    margin-top: 41vh;
 }
 
 .image-container img {
-    height: 500px;
-    width: 500px;
-    margin-right: 80px;
-    padding-top: 80px;
+    height: 64vh;
+    width: 100%;
+    margin-right: 4vw;
+    padding-top: 7vw;
 }
 
 .index-image-container img {
@@ -335,7 +335,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: left;
-    margin-right: 12vw;
+    width: 70vw;
   }
 
   .category-links li {
@@ -353,6 +353,7 @@
     font-family: Arial, Helvetica, sans-serif;
     justify-content: space-between;
     margin-top: 1vw;
+    margin-right: 1vw;
  
   }
   
