--- a/frontend/src/components/CartItems/CartItems.css
+++ b/frontend/src/components/CartItems/CartItems.css
@@ -1,6 +1,6 @@
 .cart-index-wrapper {
     display: flex;
-    height: 100vh
+    margin-bottom: 10vh;
 }
 
 .cart-items-wrapper {
@@ -12,15 +12,15 @@
 }
 
 .cart-items-container {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
     padding-top: 3%;
     padding-bottom: 3%;
-    margin-top: 12px;
-    margin-bottom: 24px;
+    margin-top: 1vw;
+    margin-bottom: 2vw;
     background-color: rgb(246, 246, 248);
     box-sizing: content-box;
-    width: 980px;
+    width: 70vw;
     display: flex;
     flex-direction: column;
     margin-left: auto;
@@ -32,24 +32,24 @@
 }
 
 .cart-heading {
-    font-size: 24px;
+    font-size: 1.8vw;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
-    padding: 20px;
-    margin-top: 10px;
+    padding: 2vw;
+    margin-top: 1vh;
 }
 
 .cart-item-card {
-    font-size: 14px;
-    margin: 20px;
+    font-size: 1vw;
+    margin: 2vw;
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
 
 }
 
 .cart-item-card img {
-    width: 17%;
-    padding-right: 20px;
+    width: 25%;
+    padding-right: 2vw;
 }
 
 .cart-item-details {
@@ -60,12 +60,12 @@
 }
 
 .cart-item-brand {
-    padding-bottom: 5px;
+    padding-bottom: .5vh;
 }
 
 .cart-item-size {
-    font-size: 12px;
-    padding-top: 5px;
+    font-size: 1vw;
+    padding-top: .5vh;
     color: gray;
     
 }
@@ -74,24 +74,24 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.063);
     border-right-color: rgba(0, 0, 0, 0.063);
     border-left-color: rgba(0, 0, 0, 0.063);
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin-top: 1.5vw;
+    margin-bottom: 1.5vw;
     margin-left: 30px;
     margin-right: 30px;
 }
 
 .cart-index-total {
-    padding: 16px;
+    padding: 1.5vw;
     border-width: 1px;
     border: 1px solid rgb(204, 204, 204);
     border-radius: 4px;
     display: block;
-    height: 250px;
+    height: 30vh;
     width: 15%;
     margin-right: auto;
-    margin-top: 87px;
+    margin-top: 13vh;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 1vw;
     display: flex;
     flex-direction: column;
 }
@@ -101,15 +101,15 @@
 }
 
 .cart-index-total h2 {
-    font-size: 16px;
+    font-size: 1.1vw;
     font-weight: 700;
     margin-top: 1em;
 }
 
 .cart-index-total button {
-    font-size: 14px;
+    font-size: 1vw;
     padding: 0.25em 1.125em;
-    min-height: 44px;
+    min-height: 5vh;
     font-weight: var(--font-weight-bold);
     border-width: 2px;
     justify-content: center;
@@ -139,7 +139,7 @@
 }
 
 .total-price {
-    font-size: 14px;
+    font-size: 1vw;
     font-weight: 700;
 }
 
@@ -149,23 +149,23 @@
 
 .edit-delete-cart-item {
     margin-left: 0px;
-    margin-top: 70px;
+    margin-top: 8vh;
 }
 
 .edit-delete-cart-item button {
     cursor: pointer;
     color: rgb(19, 107, 234);
-    padding: 4px;
-    margin-left: 10px;
+    padding: .4vw;
+    margin-left: 1vw;
     display: inline-block;
     border: none;
     background-color: transparent;
-    padding-left: 5px;
+    padding-left: .5vh;
     border-left: 1px solid rgba(0, 0, 0, 0.198);
 }
 
 .edit-delete-cart-item select {
-    font-size: 14px;
+    font-size: 1vw;
     vertical-align: middle;
     background-color: rgb(255, 255, 255);
     text-transform: none;
@@ -175,10 +175,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    padding-right: 4px;
+    padding-right: .4vh;
     color: rgb(0, 0, 0);
-    padding-left: 8px;
-    height: 32px;
-    min-width: 46px;
+    padding-left: .8vh;
+    height: 4vh;
+    min-width: 3vw;
     text-align: center;
 }
