--- a/frontend/src/components/CartItems/CartItems.css
+++ b/frontend/src/components/CartItems/CartItems.css
@@ -76,8 +76,8 @@
     border-left-color: rgba(0, 0, 0, 0.063);
     margin-top: 1.5vw;
     margin-bottom: 1.5vw;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 .cart-index-total {
