--- a/frontend/src/components/Loves/Loves.css
+++ b/frontend/src/components/Loves/Loves.css
@@ -1,16 +1,16 @@
 
 .loves-index-wrapper {
-    height: 280vh;
+   margin-bottom: 10vh;
 }
 
 .loves-heading {
-    font-size: 32px;
+    font-size: 2.5vw;
     font-family: Georgia, 'Times New Roman', Times, serif;
     width: 100%;
     max-width: 1012px;
-    padding-top: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-top: 5vh;
+    padding-left: 1.1vw;
+    padding-right: 1.1.vw;
     margin-left: auto;
     margin-right: auto;
 }
@@ -22,12 +22,12 @@
 }
 
 .loves-container {
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-top: 12px;
+    padding-left: 1.1vw;
+    padding-right: 1.1vw;
+    margin-top: 1vw;
     background-color: transparent;
     box-sizing: content-box;
-    width: 980px;
+    width: 70vw;
     display: flex;
     flex-direction: column;
     margin-left: auto;
@@ -36,21 +36,21 @@
 
 .love-details-container {
     display: flex;
-    font-size: 14px;
+    font-size: 1vw;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 20px;
+    margin: 2vw;
 }
 
 .love-details-container img {
-    width: 11%;
-    padding-right: 20px;
+    width: 15%;
+    padding-right: 2vw;
 }
 .love-details {
     width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: left;
-    margin-right: 20px;
+    margin-right: 2vw;
 }
 
 .brand-link {
@@ -63,15 +63,15 @@
 }
 
 .love-size {
-    font-size: 12px;
+    font-size: .8vw;
     color: gray;
    
 }
 
 .price-love {
     flex-basis: auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 1vw;
+    padding-right: 1vw;
     min-width: 0px;
     width: 13%;
     display: block;
@@ -79,8 +79,8 @@
 
 .loves-buttons-container {
     flex-basis: auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 1vw;
+    padding-right: 1vw;
     min-width: 0px;
     width: 25%;
     display: block;
@@ -93,9 +93,9 @@
 
 
 .love-cart-button {
-    font-size: 14px;
+    font-size: 1vw;
     padding: 0.25em 1.125em;
-    min-height: 44px;
+    min-height: 5vh;
     font-weight: 700;
     border-width: 2px;
     justify-content: center;
@@ -116,10 +116,10 @@
 }
 
 .love-delete-button {
-    width: 100px;
-    margin-left: 30px;
-    width: 24px;
-    height: 24px;
+    width: 10vw;
+    margin-left: 2vw;
+    width: 2vw;
+    height: 2vh;
     background-color: transparent;
     border: none;
     
@@ -127,7 +127,7 @@
 
 .love-index-buttons svg {
     fill: rgb(207, 17, 44);
-    padding-top: 10px;
+    padding-top: .5vh;
 }
 
 
