--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -4,9 +4,9 @@
     color: white;
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: .8vw;
     width: 100vw;
-    padding: 20px 0px;
+    padding: 2vw 0px;
 }
 
 .about-explore-container {
@@ -21,7 +21,7 @@
 
 .footer-section h4 {
     font-weight: 700;
-    font-size: 14px;
+    font-size: 1vw;
     
    
 }
@@ -31,12 +31,12 @@
     flex-direction: column;
     color: white;
     text-decoration: none;
-    margin-top: 12px;
+    margin-top: 1vh;
 }
 
 .footer-links li {
     color: white;
-    margin-top: 12px;
+    margin-top: 1vh;
     align-items: left;
     text-align: left;
 }
@@ -44,15 +44,15 @@
 .footer-section-what {
     display: flex;
     flex-direction: column;
-    padding: 0px 20px;
+    padding: 0px 2vw;
     text-align: left;
-    margin-left: 200px;
+    margin-left: 20vw;
 }
 
 
 .footer-section-todo h4 {
     font-weight: 700;
-    font-size: 14px
+    font-size: 1vw
    
 }
 
@@ -60,16 +60,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 50px;
+    margin-right: 5vw;
 }
 
 .connect-links-container h4 {
-    font-size: 14px;
+    font-size: 1.1vw;
     font-weight: 700;
-    margin-bottom: 12px;
+    margin-bottom: 1vh;
 
 }
 
 .connect-links li {
-    margin-top: 12px;
+    margin-top: 1vw;
 }
